--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,14 +63,14 @@
         .board .box-row {
           clear: both;
           width: 200px;
-          height: 75px;
+          height: 75%;
           margin: 0 auto;
         }
 
         .board .box-row .box {
           display: block;
-          height: 50px;
-          width: 50px;
+          height: 50%;
+          width: 50%;
           background-color: #fff;
           border: 1px solid #333;
           margin: 8px;
@@ -142,7 +142,7 @@
 /*------------------------- Image Index  -------------------------------------*/
         .jumbotron-fluid {
           margin:  auto;
-          width: 690px;
+          width: 690%;
           min-width: fit-content;    
         }
 
