--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@
         }
 
         h6 {
-          
+
           size: bold;
           text-align: center;
           font-style: italic;
@@ -72,7 +72,7 @@
           height: 50%;
           width: 50%;
           background-color: #fff;
-          border: 1px solid rgb(3, 3, 3);
+          border: 1px solid #333;
           margin: 8px;
           float: left;
           line-height: 50px;
