--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@
         h1 {
           text-align: center;
           font-style: italic;
-          color: #ffffff;
+          color: #;
         }
 
         h6 {
