--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,17 +22,19 @@
           width: 960px;
           height: 150px;
         }
+
         #Content {
           height: 100%;
           width: 960px;
         }
-        .section {height:100vh;
+        .section {
+          height:100vh;
         }
   /*-------------------------------------*/
         h1 {
           text-align: center;
           font-style: italic;
-          color: #;
+          color: #ffffff;
         }
 
         h6 {
@@ -55,27 +57,25 @@
         }
  /*------------------------ js table --------------------------------*/      
         .board {
-          margin: 20px auto;
-            
+          margin: 20px auto;    
         }
 
         .board .box-row {
           clear: both;
-          width: 200px;
-          height: 60px;
-          margin: 0 auto;
         }
 
         .board .box-row .box {
           display: block;
-          height: 50px;
-          width: 50px;
+          height: 100px;
+          width: 100px;
           background-color: #fff;
           border: 1px solid #333;
           margin: 5px;
           float: left;
           line-height: 50px;
           text-align: center;
+          padding-top: 1.5rem;
+          font-size: 3rem;
         }
 
         .clear {
@@ -109,6 +109,10 @@
           position: fixed;
         }
   /*----------------------- logo' & Menu-------------------------------*/      
+        .title {
+          color: #777777;
+        }
+  
         #logo {
           float: left;
           font-size: 280%;
@@ -151,8 +155,8 @@
         }
 
         .landing {
-          width: 100%;
-          height: 100% ;
+          width: auto;
+          height: 50vh;
           padding: 20px 20px 20px 20px;
           border: 1px solid coral;
           background-color: #F0F8FF; 
@@ -198,8 +202,7 @@
           margin: 15% auto;
           padding: 15px;
           border: 1px solid #007bff;
-          width: 70%;
-          
+          width: 70%; 
         }
 
         .rules-modal {
@@ -212,7 +215,6 @@
         h4 {
           text-align: center;
           text-transform: uppercase;
-          color: #4CAF50;
         }
         
         p {
@@ -235,15 +237,12 @@
           margin-bottom: 25px; 
           min-width: fit-content;
         }
+
         .contact-header {
           margin-top: 10px;
         }
 
-        .container{
-
-        }
-
-        #start{
+        #start {
           text-align: center;
           padding: 10px;
         }
@@ -258,21 +257,39 @@
 
         .social-networks li {
           display: inline;
-          
-
         }
+
         .social-networks i {
           font-size: 3rem;
           margin: 1%;
           padding: 5%;
           color: #777777;
         }
+        
         .player-icon {
         font-size: 3rem;
         }
 
         .high {
           color: #007bff;
+        }
+
+        @media only screen and (max-width: 480px) {
+          .landing {
+            max-width: 100%;  
+            height: auto
+          }
+      
+          .board .box-row {
+            clear: both;
+          }
+       
+          .board .box-row .box {
+            height: 50px;
+            width: 50px;
+            font-size: 1rem;
+            padding: 0;
+          }
         }
         
 
