--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@
           height: 100%;
           width: 960px;
         }
+
         .section {
           height:100vh;
         }
@@ -34,14 +35,14 @@
         h1 {
           text-align: center;
           font-style: italic;
-          color: #ffffff;
+          color: #333;
         }
 
         h6 {
           margin-top: auto;
           text-align: center;
           font-style: italic;
-          color: #ffffff;
+          color: #333;
         }
 
         h2 {
@@ -54,6 +55,7 @@
 
         h4,h5,h6 {
           font-family: Georgia, 'Times New Roman', Times, serif;
+          font-display: #333;
         }
  /*------------------------ js table --------------------------------*/      
         .board {
@@ -156,7 +158,7 @@
 
         .landing {
           width: auto;
-          height: 50vh;
+          height: 55vh;
           padding: 20px 20px 20px 20px;
           border: 1px solid coral;
           background-color: #F0F8FF; 
@@ -218,6 +220,7 @@
         }
         
         p {
+          padding-top: 4%;
           text-indent: 50px;
           text-align: justify;
           letter-spacing: 7px;
