--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,6 +295,26 @@
         .high {
           color: #007bff;
         }
-
-
+.icon {
+    display: inline-block;
+    font-size: 44px;
+    animation: float 5s ease-in-out infinite;
+    }
+.ri-facebook-circle-line {
+    animation-delay: 1s;
+    }
+.ri-whatsapp-line{
+    animation-delay: 1s;
+    }
+@keyframes float {
+    0%{
+      transform: translate(0);
+      }
+    50%{
+      transform: translate(-15px);
+      }
+    100%{
+      transform: translate(0);
+      }
+    }
 
