update to readyMe and JS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,11 +81,7 @@
           padding-top: 1.5rem;
           font-size: 3rem;
         }
-        @media only screen and (max-width: 480px) {
-          .landing {
-            max-width: 100%;  
-            height: auto
-          }
+       
       
           .board .box-row {
             clear: both;
@@ -296,3 +292,16 @@
         .high {
           color: #007bff;
         }
+@media all and (max-width: 480px) {
+  .landing {
+    max-width: 100%;  
+    height: auto
+  }
+}
+@media screen and (max-width: 370px) {
+  .box-row {
+    width: auto;
+    height: auto;
+    text-align: center;
+  }
+}
