fix the MediaQueries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@
 
         .board {
           margin: 50px auto;
-          width: 37.5%;
+          width: 50%;
           display: block;
         }
 
@@ -298,10 +298,10 @@
     height: auto
   }
 }
-@media screen and (max-width: 370px) {
+/* @media screen and (max-width: 370px) {
   .box-row {
     width: auto;
     height: auto;
     text-align: center;
   }
-}
+} 
